--- a/src/components/ButtonLink.module.css
+++ b/src/components/ButtonLink.module.css
@@ -20,11 +20,18 @@
     text-decoration: none;
     color: white;
     padding: 10px 30px;
-    background-color:green;
+    background: rgb(19,156,40);
+    background: linear-gradient(165deg, rgba(19,156,40,1) 38%, rgba(81,200,62,1) 43%, rgba(101,214,69,1) 100%);
     border-radius: 5px;
-    border: 4px solid rgb(1, 65, 1);
+    border: 5px outset #1e7509;
+    border-top-color: rgb(28, 66, 37);
+    border-left-color: rgb(23, 82, 16);
+    border-bottom-color: rgb(145, 243, 106);
+    border-right-color: #8aee71;
     transition: all .3s ease;
+    box-shadow:inset 2px 2px 4px rgba(120, 120, 120, .4), inset -3px -3px 3px rgba(255,255,255,.4);
 }
+
 .button:hover{
     padding: 12px 32px;
 }
