--- a/src/pages/ResponsePage.module.css
+++ b/src/pages/ResponsePage.module.css
@@ -9,3 +9,61 @@
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
 }
+.container article{
+    border-top: 2px solid green;
+    border-bottom: 2px solid green;
+    width: 25vw;
+    height: 15vh;
+    margin: 0;
+
+    background-color:rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.response h5{
+    border-radius: 3px;
+    background-color: white;
+    padding: 10px;
+    width: fit-content;
+    margin: 0;
+}
+.response{
+    display: flex;
+    gap:30px;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+}
+.responses{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 65vw;
+    margin: 0 auto;
+    position: relative;
+    top: 10vh;
+    border-top: 2px solid green;
+    padding: 40px 30px;
+    background-color: rgba(0, 0, 0, 0.226);
+}
+.response h3{
+    background: rgb(19,156,40);
+    background: linear-gradient(165deg, rgba(19,156,40,1) 38%, rgba(81,200,62,1) 43%, rgba(101,214,69,1) 100%);
+    border-radius: 5px;
+    border: 5px outset #1e7509;
+    border-top-color: rgb(28, 66, 37);
+    border-left-color: rgb(23, 82, 16);
+    border-bottom-color: rgb(145, 243, 106);
+    border-right-color: #8aee71;
+    width: 25px;
+}
+.response div{
+    display:inline-flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
