--- a/src/components/ProfileImage.module.css
+++ b/src/components/ProfileImage.module.css
@@ -22,3 +22,11 @@
     border-bottom-left-radius: 5px;
     background-color:white;
 }
+@media (max-width: 600px) {
+    .image{
+        max-width: 70vw;
+    }
+    .container{
+        gap:5px;
+    }
+}
