--- a/src/components/Response.module.css
+++ b/src/components/Response.module.css
@@ -28,3 +28,13 @@
     cursor: pointer;
     transform:scale(1.1);
 }
+@media (max-width: 600px) {
+    .container{
+        width: 50vw;
+        height: 50vw;
+    }
+    .selected{
+        width: 50vw;
+        height: 50vw;
+    }
+}
