--- a/src/pages/LandPage.module.css
+++ b/src/pages/LandPage.module.css
@@ -2,6 +2,8 @@
     z-index: -50;
     height: 100vh;
     width: 100vw;
+    position: absolute;
+    top: 0;
     background-image: url(../images/1/fgfg@1X.png);
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
@@ -22,3 +24,16 @@
     top: 70vh;
     margin: 0 auto;
 }
+@media (max-width: 600px) {
+    .container{
+        background-size: 300vw 100vh;
+        background-position: 100% 0;
+    }
+
+    .title {
+      position: relative;
+        top: 25vh;
+        background-size: 80vw ;
+        width: 80vw;
+    }
+  }
