--- a/src/pages/Page2.module.css
+++ b/src/pages/Page2.module.css
@@ -4,7 +4,8 @@
     gap: 10vw;
     justify-content: center;
     align-items: center;
-    margin-top: 25vh;
+    margin-top: 12vh;
+    margin-bottom: 25px;
 }
 .container{
 
