--- a/src/components/ProfileImage.module.css
+++ b/src/components/ProfileImage.module.css
@@ -6,15 +6,17 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+}
+.container div{
+    border: 10px green solid;
 }
 .image{
-    max-width: 400px;
-    max-height: 400px;
-    border-radius: 5px;
-    border: 2px white solid;
+    width: 300px;
+    height: 300px;
+    border: 40px navy solid;
 }
 .text{
+    font-size: 1.5em;
     width: fit-content;
     padding: 5px 20px;
     border: 1px solid black;
@@ -24,9 +26,15 @@
 }
 @media (max-width: 600px) {
     .image{
-        max-width: 70vw;
+        width: unset;
+        height: 20vh;
+        border: unset;
     }
     .container{
         gap:5px;
+        
+    }
+    .text{
+        font-size: medium;
     }
 }
