--- a/src/components/Response.module.css
+++ b/src/components/Response.module.css
@@ -1,6 +1,6 @@
 .container{
     background-color: white;
-    width: 350px;
+    width: 35vw;
     height: 300px;
     display: flex;
     align-items: center;
@@ -8,10 +8,11 @@
     border-radius: 5px;
     border: 2px solid black;
     transition: all .3s ease;
+    border: 4px solid gray;
 }
 .selected{
     background-color: white;
-    width: 350px;
+    width: 35vw;
     height: 300px;
     display: flex;
     align-items: center;
