--- a/src/pages/LandPage.module.css
+++ b/src/pages/LandPage.module.css
@@ -24,6 +24,22 @@
     top: 70vh;
     margin: 0 auto;
 }
+.p{
+    background-color:navy;
+    border: 4px solid green;
+    font-size: larger;
+    font-weight: bold;
+    padding: 10px 20px;
+    position: relative;
+    color: white;
+    top: 33vh;
+    width: 40vw;
+    margin: 0 auto;
+}
+.p span{
+    color: rgb(12, 197, 12);
+    font-weight: bolder;
+}
 @media (max-width: 600px) {
     .container{
         background-size: 400vw 100vh;
