--- a/src/pages/Page3.module.css
+++ b/src/pages/Page3.module.css
@@ -10,9 +10,10 @@
     background-repeat: no-repeat;
 }
 .container img{
-    margin:20vh auto 0 auto;
+    margin:5vh auto 0 auto;
     border: 3px solid green;
     border-radius: 3px;
+    width: 55vw;
 }
 .situation{
     border-top: 2px solid green;
@@ -32,7 +33,7 @@
         background-position: 100% 0;
     }
     .container img{
-        max-width:85vw;
+        width:85vw;
     }
     .situation{
         padding: 15px;
