--- a/src/pages/ResponsePage.module.css
+++ b/src/pages/ResponsePage.module.css
@@ -9,6 +9,13 @@
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
 }
+.visionman{
+    position:absolute;
+    z-index: -5;
+    top: 30px;
+    left: 200px;
+    width: 8vw;
+}
 .container article{
     border-top: 2px solid green;
     border-bottom: 2px solid green;
@@ -46,9 +53,11 @@
     margin: 0 auto;
     position: relative;
     top: 10vh;
-    border-top: 2px solid green;
+    border-top: 8px solid green;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
     padding: 40px 30px;
-    background-color: rgba(0, 0, 0, 0.226);
+    background-color: rgba(0, 0, 0, 0.692);
 }
 .response h3{
     background: rgb(19,156,40);
@@ -81,8 +90,13 @@
         gap: 10px;
     }
     .responses{
+        width: 80vw;
         gap: 10px;
         position: initial;
         margin-top: 25px;
+    }
+    .visionman{
+        width: 200px;
+        top:200px;
     }
 }
