--- a/src/pages/Page4.module.css
+++ b/src/pages/Page4.module.css
@@ -5,7 +5,7 @@
     width: 100vw;
     position: absolute;
     top:0;
-    background-image: url(../images/2/Asset\ 2PP@1X.png);
+    background-image: url(../images/2/hombre.PNG);
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
 }
