--- a/src/pages/Page2.module.css
+++ b/src/pages/Page2.module.css
@@ -14,7 +14,7 @@
     width: 100vw;
     position: absolute;
     top:0;
-    background-image: url(../images/2/Asset\ 2PP@1X.png);
+    background-image: url(../images/Assets/empty.jpg);
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
 }
