--- a/src/pages/LandPage.module.css
+++ b/src/pages/LandPage.module.css
@@ -4,7 +4,7 @@
     width: 100vw;
     position: absolute;
     top: 0;
-    background-image: url(../images/1/fgfg@1X.png);
+    background-image: url(../images/Assets/fgfg.jpg);
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
 }
@@ -14,9 +14,10 @@
     margin: 0 auto ;
     width:60vw;
     height: 20vh;
-    background-image: url(../images/1/title@1X.png);
+    background-image: url(../images/Assets/title-copy.png);
     background-size: 60vw;
     background-repeat: no-repeat;
+    background-position-y: -10vh ;
 }
 .play{
     width: 100vw;
@@ -44,12 +45,15 @@
     .container{
         background-size: 400vw 100vh;
         background-position: 100% 0;
+        
     }
 
     .title {
       position: relative;
         top: 25vh;
-        background-size: 80vw ;
-        width: 80vw;
+        background-size: 90vw ;
+        width: 90vw;
+        background-position-y: 0;
+        background-position-x: -5px;
     }
   }
